#16-Illustrarion-of-GameBoard: fixing list calls that seem to not exist